--- a/web/locale/sl/LC_MESSAGES/django.po
+++ b/web/locale/sl/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-13 11:59+0000\n"
+"POT-Creation-Date: 2019-11-13 20:14+0000\n"
 "PO-Revision-Date: 2015-08-18 11:06+0100\n"
 "Last-Translator: Sonja Jerše <sonja.jerse@gmail.com>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
@@ -159,7 +159,9 @@ msgstr "Uredi"
 msgid "Delete"
 msgstr "Izbriši"
 
+#. Translators: Confirm moving a problem.
 #: web/templates/courses/_problem_set.html:89
+#: web/templates/courses/problem_move_form.html:21
 msgid "Move"
 msgstr "Premakni"
 
@@ -173,22 +175,30 @@ msgstr "Premakni"
 msgid "(current)"
 msgstr "(tukaj)"
 
+#. Translators: Tells students there is no problems yet in this course.
+#: web/templates/courses/course_detail.html:31
+msgid ""
+"This couse does not have any problems yet. Please wait for a teacher to add "
+"some."
+msgstr ""
+"Ta sklop še nima nobenih problemov. Prosimo počakajte, da jih učitelj doda."
+
 #. Translators: Button for creating new problem.
 #. Translators: Title of 'add new problem set' form.
-#: web/templates/courses/course_detail.html:35
+#: web/templates/courses/course_detail.html:40
 #: web/templates/courses/problemset_form.html:19
 msgid "Add new problem set"
 msgstr "Dodaj sklop"
 
-#: web/templates/courses/course_detail.html:57
+#: web/templates/courses/course_detail.html:62
 msgid "Demote to student"
 msgstr "Status študenta"
 
-#: web/templates/courses/course_detail.html:80
+#: web/templates/courses/course_detail.html:85
 msgid "Stop observing"
 msgstr "Nehaj opazovati"
 
-#: web/templates/courses/course_detail.html:90
+#: web/templates/courses/course_detail.html:95
 msgid "Promote to teacher"
 msgstr "Status učitelja"
 
@@ -240,6 +250,7 @@ msgstr "Dodaj"
 
 #: web/templates/courses/coursegroup_form.html:36
 #: web/templates/courses/problem_copy_form.html:23
+#: web/templates/courses/problem_move_form.html:23
 #: web/templates/courses/problemset_form.html:36
 #: web/templates/problems/problem_form.html:39
 msgid "Cancel"
@@ -261,6 +272,20 @@ msgstr "Prosimo, izberite sklop, v katerega bo prekopirana ta naloga."
 #: web/templates/courses/problem_set_detail.html:126
 msgid "Copy"
 msgstr "Kopiraj"
+
+#. Translators: Title of move problem modal.
+#: web/templates/courses/problem_move_form.html:6
+#, fuzzy
+#| msgid "Copy problem"
+msgid "Move problem"
+msgstr "Kopiraj nalogo"
+
+#. Translators: Text of move problem modal.
+#: web/templates/courses/problem_move_form.html:10
+#, fuzzy
+#| msgid "Please choose a problem set to copy this problem to:"
+msgid "Please choose a problem set to move this problem to:"
+msgstr "Prosimo, izberite sklop, v katerega bo prekopirana ta naloga."
 
 #: web/templates/courses/problem_set_detail.html:20
 #: web/templates/courses/problem_set_detail.html:38
@@ -463,6 +488,10 @@ msgstr "rešitve"
 #: web/templates/problems/solutions.html:50
 msgid "Your solution"
 msgstr "Vaša rešitev"
+
+#: web/templates/problems/solutions.html:56
+msgid "Last submission time:"
+msgstr "Čas zadnje oddaje:"
 
 #. Translators: in solution comparison table
 #: web/templates/problems/solutions.html:60
