--- a/web/locale/sl/LC_MESSAGES/django.po
+++ b/web/locale/sl/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-23 16:40+0000\n"
+"POT-Creation-Date: 2023-03-17 18:24+0000\n"
 "PO-Revision-Date: 2015-08-18 11:06+0100\n"
 "Last-Translator: Sonja Jerše <sonja.jerse@gmail.com>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
@@ -18,72 +18,52 @@ msgstr ""
 "n%100==4 ? 2 : 3);\n"
 "X-Generator: Poedit 1.7.5\n"
 
-#: courses/models.py:370
 msgid "Problem descriptions and official solutions are hidden"
 msgstr "Besedilo nalog in uradne rešitve so skrite"
 
 #. Translators: Uradne rešitve so skrite
-#: courses/models.py:371 templates/courses/_problem_set.html:53
 msgid "Official solutions are hidden"
 msgstr "Uradne rešitve so skrite"
 
 #. Translators: Uradne rešitve so pogojno vidne
-#: courses/models.py:372 templates/courses/_problem_set.html:56
 msgid "Official solutions are visible when solved"
 msgstr "Uradne rešitve so vidne po sprejeti rešitvi"
 
 #. Translators: Uradne rešitve so vidne
-#: courses/models.py:373 templates/courses/_problem_set.html:59
 msgid "Official solutions are visible"
 msgstr "Uradne rešitve so vidne"
 
-#: courses/models.py:378
 msgid "Title"
 msgstr "Naslov"
 
-#: courses/models.py:379
 msgid "Description"
 msgstr "Opis"
 
-#: courses/models.py:380 problems/models.py:24
 msgid "Visible"
 msgstr "Vidno"
 
-#: courses/models.py:383
 msgid "Solution visibility"
 msgstr "Vidnost rešitev"
 
 #. Translators: Default heading for pages (defined in base.html)
-#: templates/base.html:11 templates/registration/login.html:71
 msgid "Project Tomo"
 msgstr "Projekt Tomo"
 
-#: templates/base.html:42
 msgid "(logout)"
 msgstr "(odjava)"
 
-#: templates/base.html:44 templates/base.html:78 templates/help.html:5
-#: templates/help.html:9 templates/help.html:15 templates/help_students.html:9
-#: templates/help_teachers.html:9
 msgid "Help"
 msgstr "Pomoč"
 
-#: templates/base.html:82 templates/help_students.html:5
-#: templates/help_teachers.html:5 templates/terms_of_service.html:5
-#: templates/terms_of_service.html:9 templates/terms_of_service.html:16
 msgid "Terms of service"
 msgstr "Pogoji poslovanja"
 
-#: templates/base.html:84 templates/privacy_policy.html:5
-#: templates/privacy_policy.html:9
 msgid "Privacy policy"
 msgstr ""
 
-#: templates/base.html:86
 msgid "Contact"
 msgstr "Kontakt"
 
-#: templates/base.html:89
 msgid ""
 "Copyright &copy; Faculty of Mathematics and Physics, University of "
 "Ljubljana, 2015. All Rights Reserved. "
@@ -91,97 +71,52 @@ msgstr ""
 "Copyright &copy; Fakulteta za matematiko in fiziko, Univerza v Ljubljani, "
 "2015. Vse pravice pridržane. "
 
-#: templates/courses/_course_header.html:7
-#: templates/courses/_course_header.html:9
 msgid "Taught course"
 msgstr "Predmet učite"
 
-#: templates/courses/_course_header.html:19
-#: templates/courses/_course_header.html:21
 msgid "Remove from my courses"
 msgstr "Odstrani iz mojih predmetov"
 
-#: templates/courses/_course_header.html:33
-#: templates/courses/_course_header.html:35 templates/homepage.html:43
-#: templates/homepage.html:44
 msgid "Add to my courses"
 msgstr "Dodaj med moje predmete"
 
-#: templates/courses/_problem_set.html:7
-#: templates/courses/course_progress.html:22
-#: templates/courses/course_progress.html:33
-#: templates/courses/problem_set_detail.html:226
-#: templates/courses/problem_set_progress.html:37
-#: templates/courses/problem_set_progress_groups.html:38
 msgid "valid"
 msgstr "veljavno"
 
-#: templates/courses/_problem_set.html:7
-#: templates/courses/course_progress.html:22
-#: templates/courses/course_progress.html:33
-#: templates/courses/problem_set_detail.html:226
-#: templates/courses/problem_set_progress.html:37
-#: templates/courses/problem_set_progress_groups.html:38
 msgid "invalid"
 msgstr "neveljavno"
 
-#: templates/courses/_problem_set.html:7
-#: templates/courses/course_progress.html:22
-#: templates/courses/course_progress.html:33
-#: templates/courses/problem_set_detail.html:226
-#: templates/courses/problem_set_progress.html:37
-#: templates/courses/problem_set_progress_groups.html:38
 msgid "empty"
 msgstr "prazno"
 
 #. Translators: Sklop je viden
-#: templates/courses/_problem_set.html:33
 msgid "Problem set is visible"
 msgstr "Sklop je viden"
 
 #. Translators: Sklop je skrit
-#: templates/courses/_problem_set.html:36
 msgid "Problem set is hidden"
 msgstr "Sklop je skrit"
 
 #. Translators: Besedila nalog so skrita
-#: templates/courses/_problem_set.html:50
 msgid "Problem descriptions are hidden"
 msgstr "Besedila nalog so skrita"
 
 #. Translators: edit problem form button.
-#: templates/courses/_problem_set.html:76
-#: templates/courses/course_groups.html:28
-#: templates/courses/coursegroup_form.html:30
-#: templates/courses/problem_set_detail.html:56
-#: templates/problems/problem_form.html:33
 msgid "Edit"
 msgstr "Uredi"
 
 #. Translators: Title of course group delete confirmation page. Brisanje skupine
-#: templates/courses/_problem_set.html:82
-#: templates/courses/course_groups.html:34
-#: templates/courses/coursegroup_confirm_delete.html:8
 msgid "Delete"
 msgstr "Izbriši"
 
-#: templates/courses/_problem_set.html:87
 msgid "Move"
 msgstr "Premakni"
 
 #. Translators: current page in navigation
-#: templates/courses/course_detail.html:10
-#: templates/courses/course_groups.html:12
-#: templates/courses/problem_set_progress.html:12
-#: templates/courses/problem_set_progress_groups.html:12
-#: templates/problems/solutions.html:18 templates/statistics/contents.html:11
-#: templates/statistics/solution_at_time.html:14
-#: templates/statistics/user_problem_part_solution_history.html:15
 msgid "(current)"
 msgstr "(tukaj)"
 
 #. Translators: Tells students there is no problems yet in this course.
-#: templates/courses/course_detail.html:31
 msgid ""
 "This couse does not have any problems yet. Please wait for a teacher to add "
 "some."
@@ -190,287 +125,216 @@ msgstr ""
 
 #. Translators: Button for creating new problem.
 #. Translators: Title of 'add new problem set' form.
-#: templates/courses/course_detail.html:40
-#: templates/courses/problemset_form.html:20
 msgid "Add new problem set"
 msgstr "Dodaj sklop"
 
-#: templates/courses/course_detail.html:62
 msgid "Demote to student"
 msgstr "Status študenta"
 
-#: templates/courses/course_detail.html:86
 msgid "Stop observing"
 msgstr "Nehaj opazovati"
 
-#: templates/courses/course_detail.html:96
 msgid "Promote to teacher"
 msgstr "Status učitelja"
 
 #. Translators: Progress of students in a problem set - heading in navigation
-#: templates/courses/course_groups.html:9
 msgid "Course groups"
 msgstr "Skupine"
 
 #. Translators: Button for creating new problem.
 #. Translators: Title of 'add new problem set' form.
-#: templates/courses/course_groups.html:62
-#: templates/courses/coursegroup_form.html:19
 msgid "Add new course group"
 msgstr "Dodaj novo skupino"
 
 #. Translators: Translators: Text of course group delete confirmation page. Ste prepričani, da želite izbrisati to skupino?
-#: templates/courses/coursegroup_confirm_delete.html:12
 msgid "Are you sure you want to delete this course group?"
 msgstr "Ste prepričani, da želite pobrisati to skupino?"
 
-#: templates/courses/coursegroup_confirm_delete.html:16
-#: templates/courses/problemset_confirm_delete.html:18
-#: templates/problems/problem_confirm_delete.html:18
 msgid "Yes"
 msgstr "Da"
 
-#: templates/courses/coursegroup_confirm_delete.html:18
-#: templates/courses/problemset_confirm_delete.html:20
-#: templates/problems/problem_confirm_delete.html:20
 msgid "No"
 msgstr "Ne"
 
 #. Translators: Title of editing form for problem sets.
-#: templates/courses/coursegroup_form.html:16
 msgid "Edit course group"
 msgstr "Uredi skupino"
 
 #. Translators: add new problem form button.
-#: templates/courses/coursegroup_form.html:33
-#: templates/courses/problemset_form.html:34
-#: templates/problems/problem_form.html:36
 msgid "Add"
 msgstr "Dodaj"
 
-#: templates/courses/coursegroup_form.html:36
-#: templates/courses/problem_copy_form.html:23
-#: templates/courses/problemset_form.html:37
-#: templates/problems/problem_form.html:39
 msgid "Cancel"
 msgstr "Prekliči"
 
 #. Translators: Title of copy problem modal.
-#: templates/courses/problem_copy_form.html:6
 msgid "Copy problem"
 msgstr "Kopiraj nalogo"
 
 #. Translators: Text of copy problem modal.
-#: templates/courses/problem_copy_form.html:10
 msgid "Please choose a problem set to copy this problem to:"
 msgstr "Prosimo, izberite sklop, v katerega bo prekopirana ta naloga."
 
 #. Translators: Confirm copying of a problem.
-#: templates/courses/problem_copy_form.html:21
-#: templates/courses/problem_set_detail.html:139
-#: templates/courses/problem_set_detail.html:161
 msgid "Copy"
 msgstr "Kopiraj"
 
-#: templates/courses/problem_set_detail.html:20
-#: templates/courses/problem_set_detail.html:65
-#: templates/courses/problem_set_detail.html:149
 msgid "Download"
 msgstr "Prenesi"
 
 #. Translators: Datoteke za učence
-#: templates/courses/problem_set_detail.html:29
 msgid "Student files"
 msgstr "Datoteke za učence"
 
 #. Translators: Datoteke z uradnimi rešitvami
-#: templates/courses/problem_set_detail.html:33
 #, fuzzy
 #| msgid "Solutions"
 msgid "Solution files"
 msgstr "Rešitve"
 
 #. Translators: Datoteke za učitelje
-#: templates/courses/problem_set_detail.html:37
 msgid "Teacher files"
 msgstr "Datoteke za učitelje"
 
 #. Translators: LaTeX datoteke
-#: templates/courses/problem_set_detail.html:41
 msgid "LaTeX files"
 msgstr "LaTeX datoteke"
 
 #. Translators: Datoteke z rezultati
-#: templates/courses/problem_set_detail.html:45
 msgid "Files with results"
 msgstr "Datoteke z rezultati"
 
-#: templates/courses/problem_set_detail.html:48
 #, fuzzy
 #| msgid "Your solution"
 msgid "HTML without solutions"
 msgstr "HTML brez rešitev"
 
-#: templates/courses/problem_set_detail.html:51
 #, fuzzy
 #| msgid "solutions"
 msgid "HTML with solutions"
 msgstr "HTML z rešitvami"
 
-#: templates/courses/problem_set_detail.html:54
-#: templates/courses/problem_set_detail.html:135
 msgid "Update"
 msgstr "Posodobi"
 
 #. Translators: Button for downloading all problem files within a problem set.
-#: templates/courses/problem_set_detail.html:67
 msgid "Download all problem files"
 msgstr "Prenesi vse datoteke z nalogami"
 
 #. Translators: Datoteka za reševanje
-#: templates/courses/problem_set_detail.html:110
 msgid "File for solving"
 msgstr "Datoteka za reševanje"
 
 #. Translators: Datoteka z uradnimi rešitvami
-#: templates/courses/problem_set_detail.html:114
 #, fuzzy
 #| msgid "Solutions"
 msgid "Solution file"
 msgstr "Rešitve"
 
 #. Translators: Datoteka za urejanje
-#: templates/courses/problem_set_detail.html:118
 msgid "File for editing"
 msgstr "Datoteka za urejanje"
 
-#: templates/courses/problem_set_detail.html:122
-#: templates/courses/problem_set_detail.html:123
-#: templates/courses/problem_set_detail.html:154
-#: templates/courses/problem_set_detail.html:155
-#: templates/problems/solutions.html:12 templates/problems/solutions.html:14
 msgid "Solutions"
 msgstr "Rešitve"
 
-#: templates/courses/problem_set_detail.html:127
+#. Translators: Naloga je vidna
+#, fuzzy
+#| msgid "Problem set is visible"
+msgid "Problem is visible"
+msgstr "Sklop je viden"
+
+#. Translators: Naloga je skrna
+#, fuzzy
+#| msgid "Problem set is hidden"
+msgid "Problem is hidden"
+msgstr "Sklop je skrit"
+
 msgid "Move up"
 msgstr "Premakni gor"
 
-#: templates/courses/problem_set_detail.html:131
 msgid "Move down"
 msgstr "Premakni dol"
 
-#: templates/courses/problem_set_detail.html:152
 msgid "Download this problem file"
 msgstr "Datoteka z nalogo"
 
-#: templates/courses/problem_set_detail.html:193
-#: templates/problems/solutions.html:39 templates/problems/solutions.html:41
-#: templates/statistics/solution_at_time.html:35
-#: templates/statistics/solution_at_time.html:37
 msgid "part"
 msgstr "podnaloga"
 
 #. Translators: Button for creating new problem.
 #. Translators: Title of 'add new problem' form.
-#: templates/courses/problem_set_detail.html:207
-#: templates/problems/problem_form.html:22
 msgid "Add new problem"
 msgstr "Dodaj nalogo"
 
 #. Translators: Progress of students in a problem set - heading in navigation
-#: templates/courses/problem_set_progress.html:9
-#: templates/courses/problem_set_progress_groups.html:9
 msgid "Progress"
 msgstr "Napredek"
 
 #. Translators: Title of problem delete confirmation page. Brisanje sklopa
-#: templates/courses/problemset_confirm_delete.html:9
 msgid "Delete problem set"
 msgstr "Brisanje sklopa"
 
 #. Translators: Translators: Text of problem set delete confirmation page. Ste prepričani, da želite pobrisati sklop
-#: templates/courses/problemset_confirm_delete.html:13
 msgid "Are you sure you want to delete problem set"
 msgstr "Ste prepričani, da želite pobrisati sklop"
 
 #. Translators: Title of editing form for problems sets.
-#: templates/courses/problemset_form.html:17
 msgid "Edit problem set"
 msgstr "Uredi sklop"
 
 #. Translators: edit problem confirmation form button.
-#: templates/courses/problemset_form.html:31
 msgid "Save"
 msgstr "Shrani"
 
 #. Translators: Title of problem delete confirmation page. Brisanje naloge
-#: templates/problems/problem_confirm_delete.html:9
 msgid "Delete problem"
 msgstr "Brisanje naloge"
 
 #. Translators: Translators: Text of problem delete confirmation page. Ste prepričani, da želite pobrisati nalogo
-#: templates/problems/problem_confirm_delete.html:13
 msgid "Are you sure you want to delete problem"
 msgstr "Ste prepričani, da želite pobrisati nalogo"
 
 #. Translators: Title of editing form for problems.
-#: templates/problems/problem_form.html:19
 msgid "Edit problem"
 msgstr "Uredi nalogo"
 
 #. Translators: Title of solutions page.
-#: templates/problems/solutions.html:4
 msgid "solutions"
 msgstr "rešitve"
 
 #. Translators: Title of user solutions column with student name.
-#: templates/problems/solutions.html:54
 #, fuzzy
 #| msgid "Solutions"
 msgid "Solution of"
 msgstr "Rešitve"
 
 #. Translators: Title of user solutions column.
-#: templates/problems/solutions.html:57
-#: templates/statistics/solution_at_time.html:50
 msgid "Your solution"
 msgstr "Vaša rešitev"
 
-#: templates/problems/solutions.html:62
-#: templates/statistics/solution_at_time.html:56
 msgid "Last submission time:"
 msgstr "Čas zadnje oddaje:"
 
 #. Translators: in solution comparison table
-#: templates/problems/solutions.html:66
-#: templates/statistics/solution_at_time.html:60
 msgid "You did not attempt to solve this part."
 msgstr "Tega dela naloge niste poskušali reševati."
 
 #. Translators: Title of official solutions column.
-#: templates/problems/solutions.html:74
-#: templates/statistics/solution_at_time.html:70
 msgid "Official solution"
 msgstr "Uradna rešitev"
 
 #. Translators: in solution comparison table
-#: templates/problems/solutions.html:82
-#: templates/statistics/solution_at_time.html:80
 msgid "Official solutions are hidden."
 msgstr "Uradne rešitve so skrite."
 
 #. Translators: in solution comparison table
-#: templates/problems/solutions.html:89
-#: templates/statistics/solution_at_time.html:87
 msgid "Official solution will be visible once you submit a valid solution."
 msgstr "Uradne rešitve bodo vidne, ko boste oddali veljavno rešitev."
 
-#: templates/registration/login.html:14
 msgid "Sign in"
 msgstr "Prijavite se"
 
-#: templates/registration/login.html:18
 msgid ""
 "\n"
 "          Login with an external provider\n"
@@ -480,19 +344,15 @@ msgstr ""
 "          Prijavite se z zunanjim ponudnikom\n"
 "          "
 
-#: templates/registration/login.html:25
 msgid "ArnesAAI"
 msgstr "ArnesAAI"
 
-#: templates/registration/login.html:31
 msgid "Facebook"
 msgstr "Facebook"
 
-#: templates/registration/login.html:35
 msgid "Google"
 msgstr "Google"
 
-#: templates/registration/login.html:40
 msgid ""
 "\n"
 "            You can login using one of the external providers listed above.\n"
@@ -508,7 +368,6 @@ msgstr ""
 "            enotno prijavo <a href=\"https://aai.arnes.si\">ArnesAAI</a>.\n"
 "            "
 
-#: templates/registration/login.html:51
 #, python-format
 msgid ""
 "\n"
@@ -523,15 +382,12 @@ msgstr ""
 "          Spletna stran za delovanje uporablja piškotke.          "
 
 #. Translators: description of project Tomo
-#: templates/registration/login.html:75
 msgid "Your personal programming teacher."
 msgstr "Vaš osebni učitelj programiranja."
 
-#: templates/registration/login.html:91
 msgid "Sponsors"
 msgstr "Sponzorji"
 
-#: templates/registration/login.html:93
 msgid ""
 "\n"
 "    This work was funded in part by the European Union, European Regional\n"
@@ -553,38 +409,13 @@ msgstr ""
 "družba"
 
 #. Translators: Progress of students in a problem set - heading in navigation
-#: templates/statistics/contents.html:8
 msgid "Pregled"
 msgstr ""
 
 #. Translators: Progress of students in a problem set - heading in navigation
-#: templates/statistics/solution_at_time.html:11
 msgid "Stanje oddaj"
 msgstr ""
 
 #. Translators: Progress of students in a problem set - heading in navigation
-#: templates/statistics/user_problem_part_solution_history.html:12
 msgid "Skozi čas"
 msgstr ""
-
-#~ msgid "Files for solving"
-#~ msgstr "Datoteke za reševanje"
-
-#~ msgid "Files for editing"
-#~ msgstr "Datoteke za urejanje"
-
-#~ msgid "Delete course_group"
-#~ msgstr "Briši skupino"
-
-#, fuzzy
-#~| msgid "Copy problem"
-#~ msgid "Move problem"
-#~ msgstr "Kopiraj nalogo"
-
-#, fuzzy
-#~| msgid "Please choose a problem set to copy this problem to:"
-#~ msgid "Please choose a problem set to move this problem to:"
-#~ msgstr "Prosimo, izberite sklop, v katerega bo prekopirana ta naloga."
-
-#~ msgid "Statistics"
-#~ msgstr "Statistika"
