--- a/web/locale/sl/LC_MESSAGES/django.po
+++ b/web/locale/sl/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-17 18:24+0000\n"
+"POT-Creation-Date: 2023-03-17 18:33+0000\n"
 "PO-Revision-Date: 2015-08-18 11:06+0100\n"
 "Last-Translator: Sonja Jerše <sonja.jerse@gmail.com>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
@@ -286,6 +286,160 @@ msgstr "Uredi sklop"
 #. Translators: edit problem confirmation form button.
 msgid "Save"
 msgstr "Shrani"
+
+msgid "Help (Students)"
+msgstr "Navodila za učence"
+
+msgid "Using the system"
+msgstr "Delo v sistemu"
+
+msgid ""
+"You may sign in with Facebook, Google or Twitter account, or with the "
+"username and password you have received."
+msgstr ""
+"V sistem se prijavimo preko Facebook, Google ali Twitter računa oziroma z "
+"uporabniškim  imenom in geslom, ki nam je bilo dodeljeno."
+
+msgid ""
+"After successful login a list of courses appears. On the top are the starred "
+"courses. This means the teacher can examine your submissions. These courses "
+"are marked with"
+msgstr ""
+"Po uspešni prijavi se nam pokaže seznam predmetov, ki so v sistemu. Na vrhu "
+"seznama vidimo predmete, ki smo jih že dodali med priljubljene. To pomeni, "
+"da je naše ime na seznamu udeležencev (učencev) in da učitelj predmeta lahko "
+"pregleduje naše rešitve nalog. Predmeti, ki smo jih dodali na seznam "
+"priljubljenih, so označeni z"
+
+msgid "You can pin a course by pressing "
+msgstr "Predmet dodamo med priljubljene s klikom na "
+
+msgid ""
+"Shown are the last three problem sets of each starred course. The percentage "
+"of accepted submissions is indicated next to the problem sets."
+msgstr ""
+"Pri predmetih, v katere smo že vpisani, vidimo zadnje tri sklope. Poleg "
+"vsakega sklopa je  zabeleženo, kolikšen delež nalog v tem sklopu smo že "
+"rešili tako, da so naše rešitve sprejete."
+
+msgid "Courses, problem sets and problems"
+msgstr "Predmeti, sklopi in naloge"
+
+msgid ""
+"Upon opening a course, you are presented with a list of problem sets. A "
+"problem set usually encompasses similar problems. At the top of each problem "
+"set there is an introductory text about the discussed concepts, followed by "
+"the problems. Problems are independent and contain one or more corellated "
+"subproblems, that usually build upon each other and increase in difficulty."
+msgstr ""
+"Ko odpremo predmet, vidimo seznam sklopov nalog. Sklopi ponavadi zajemajo "
+"naloge podobne sorte. Ko odpremo sklop, najprej vidimo uvodno besedilo, v "
+"katerem so običajno razloženi osnovni ukazi, obravnavani v sklopu, temu pa "
+"sledijo posamezne naloge. Naloge so med seboj neodvisne, vsaka pa je "
+"sestavljena iz ene ali več podnalog, ki običajno gradijo ena na drugi in so "
+"postopoma težje."
+
+msgid "Solving the problems"
+msgstr "Reševanje nalog"
+
+msgid "Download the desired problem by pressing"
+msgstr "Izberemo nalogo, ki jo želimo reševati in s strežnika s klikom na gumb"
+
+msgid "You may also download the entire set as a ZIP file with"
+msgstr ""
+"prenesemo Python datoteko na svoj računalnik. Če želimo, lahko s klikom na "
+"gumb prenesemo tudi ZIP datoteko, ki vsebuje datoteke vseh nalog v ustreznem "
+"sklopu:"
+
+msgid ""
+"A problem file is an ordinary Python file containing commented instructions. "
+"Instructions are separated with a blank space where you can write the "
+"solution code."
+msgstr ""
+"V datoteki je besedilo naloge in podnalog, zapisano kot komentar. Med "
+"besedilom je prazen prostor, v katerega bomo vpisali rešitve."
+
+msgid ""
+"After writing down the solution, run the file (in IDLE this is achieved by "
+"pressing Run or pressing F5). This fires the tests written by the teacher "
+"and checks whether your solution is correct. Test results are then displayed "
+"in the command shell."
+msgstr ""
+"Ko rešitve vpišemo v datoteko, datoteko poženemo (v IDLE s klikom na Run "
+"oziroma s klikom na F5). Ob zagonu se s pomočjo testov, ki jih je v naprej "
+"pripravil učitelj, preveri pravilnost naloge. Rezultati testov se bodo "
+"izpisali v ukazni lupini."
+
+msgid ""
+"The solution is stored on the server each time you run the file, regardless "
+"of its validity. This means you can continue working on the problem on "
+"another device. After logging-in and downloading the files, the file will "
+"also contain your partial solutions."
+msgstr ""
+"Ko datoteko poženemo, se naše rešitve shranijo na strežnik - ne glede na "
+"pravilnost. To pomeni, da reševanje lahko nadaljujemo kasneje, na drugem "
+"računalniku. Ko se bomo ponovno prijavili v sistem in prenesli datoteko z že "
+"reševano nalogo, bodo v datoteki tudi naše rešitve."
+
+msgid "Displaying solutions and progress"
+msgstr "Ogled rešitev in napredka"
+
+msgid "After pressing"
+msgstr "Svoje rešitve določene naloge vidimo, če kliknemo na gumb"
+
+msgid ""
+"next to problem title, your solutions are displayed on the left and official "
+"solutions on the right."
+msgstr ""
+"ob imenu naloge. Odpre se nam nova stran, kjer so na levi strani zaslona "
+"prikazane naše rešitve, na desni pa rešitve tistega, ki je nalogo sestavil."
+
+msgid ""
+"The teacher decides which official solutions are visible. They may also "
+"decide that the official solutions are shown:"
+msgstr ""
+"Vidnost uradnih rešitev določa učitelj predmeta. Skrbnik lahko določi, da "
+"uradne rešitve vidimo:"
+
+msgid "always, even if your solution is incorrect (as in the image above),"
+msgstr "tudi, če naša rešitev ni sprejeta (kot na zgornji sliki),"
+
+msgid "only after your solution has been accepted (most common option) or"
+msgstr "po tem, ko je naša rešitve sprejeta (najpogosteje) ali"
+
+msgid "never."
+msgstr "v nobenem primeru."
+
+msgid ""
+"When your solution is accepted a green icon appears. If your attempted "
+"solution in invalid, a red icon appears. This way you can easily see which "
+"subproblems are yet to be solved."
+msgstr ""
+"Ko je naša rešitev podnaloge sprejeta, se ob naslovu podnaloge izriše zelena "
+"ikona. Če smo podnalogo poskusili reševati, vendar rešitev ni pravilna, se "
+"izriše rdeča ikona. Tako na prvi pogled vidimo, katere podnaloge moramo še "
+"rešiti."
+
+msgid ""
+"The problem title is also coloured based on the number of solved subproblems:"
+msgstr "Tudi naslov naloge se bo obarval glede na rešenost podnalog:"
+
+msgid "Gray, untill the first submission."
+msgstr "Dokler nismo oddali nobene podnaloge, bo naslov sive barve."
+
+msgid "Red, if one of the subproblems is solved incorrectly."
+msgstr ""
+"Če je ena od podnalog rešena nepravilno, se ozadje naslova naloge obarva "
+"rdeče (kot na zgornji sliki)."
+
+msgid "Yellow, if all up to now submitted subproblems are valid."
+msgstr ""
+"Če še nismo rešili vseh podnalog, že rešene pa so sprejete, bo naslov naloge "
+"obarvan rumeno."
+
+msgid "Green, if all subproblem solutions are valid."
+msgstr ""
+"Ko so sprejete rešitve vseh podnalog, se ozadje naslova naloge obarva zeleno."
 
 #. Translators: Title of problem delete confirmation page. Brisanje naloge
 msgid "Delete problem"
